updated with exercises through 1st ch in part 3